src/test/deca/syntax/valid/test_synt/hello_world/println_sans_argument.deca
// Description:
//    Programme avec un println sans argument.
//    [Semantique], Procedures d'affichage, p100:
//    Un appel à println sans argument a pour effet de
//    passer à la ligne.
//
// Resultats:
//    Un retour a la ligne.
//
// Historique:
//    cree le 05/01/2022

{
        println();
}
