src/test/deca/syntax/invalid/parantheses_se_suivant.deca
// Description:
//    Des paranthèses suivant une expression normale.
//
//    [Syntaxe], Grammaire concrete, p59.
//
// Resultats:
//    Erreur de parseur, 14:30
//
// Historique:
//    cree le 05/01/2022

{
    println( ("Hello, world")() );
}